--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BiocOV
 Date: 2022-10-01
 Title: An overview of Bioconductor, 2023
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: 
     c(person(
         "Vincent", "Carey", role = c("aut", "cre"),
@@ -15,11 +15,13 @@ Description: This package is a brief overview of Bioconductor.
 	for model organisms, and exploring single cell RNA-seq data.
 License: Artistic-2.0
 Encoding: UTF-8
-Depends: R (>= 4.2), dplyr, BSgenome, curatedTCGAData, scRNAseq,
+Depends: R (>= 4.2)
+Suggests: dplyr, BSgenome, curatedTCGAData, scRNAseq,
 	scuttle, scater, TxDb.Hsapiens.UCSC.hg38.knownGene,
 	Biostrings, BSgenome.Hsapiens.UCSC.hg38, survival,
-	CuratedAtlasQueryR, org.Hs.eg.db, AnnotationDbi, GO.db
-Suggests: knitr, testthat
+	BSgenome.Hsapiens.UCSC.hg19,
+	CuratedAtlasQueryR, org.Hs.eg.db, AnnotationDbi, GO.db,
+	knitr, testthat, TxDb.Hsapiens.UCSC.hg19.knownGene
 VignetteBuilder: knitr
 biocViews: Infrastructure
 RoxygenNote: 7.2.3
