--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,9 +2,10 @@ pandoc: '2.5'
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
-  A1_TCGA: A1_TCGA.html
+  A1_basic: A1_basic.html
+  B1_TCGA: B1_TCGA.html
   BiocOV: BiocOV.html
-last_built: 2023-04-23T03:32Z
+last_built: 2023-04-23T14:28Z
 urls:
   reference: https://github.com/vjcitn/BiocOV/reference
   article: https://github.com/vjcitn/BiocOV/articles
